Fixing images too tall on edge

--- a/css/main.scss
+++ b/css/main.scss
@@ -173,6 +173,7 @@ a {
 
   .link-img {
     width: 24px;
+    height: 24px;
     float: left;
     margin-top: 4px;
   }
